security/networksecurity-pod.yaml
# https://kubernetes.io/blog/2017/10/enforcing-network-policies-in-kubernetes/
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-nginx
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: foo
